SERVER-14165 port isSelf fastpath to windows

Closes #736

Signed-off-by: Benety Goh <benety@mongodb.com>